cmake_minimum_required(VERSION 3.21)
project(flower LANGUAGES CXX)
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
set(CMAKE_CXX_STANDARD 23)
find_package(fmt REQUIRED)
find_library(HIREDIS hiredis)
find_library(REDIS++ redis++)
add_executable(flower main.cpp tinyxml2.cpp WXBizMsgCrypt.cpp)
target_link_libraries(${PROJECT_NAME} pthread fmt::fmt ssl crypto ${HIREDIS} ${REDIS++})
